# pcurate

./: README.md  pyproject.toml  walkthrough.md
src/: pcurate.py
tests/: test_pcurate.py
